Got the database info to populate page, need apply to styling, then add video functions when clicked

--- a/views/cars.handlebars
+++ b/views/cars.handlebars
@@ -4,13 +4,14 @@
 
 <h1>{{ message }}</h1>
 
-<ul>
-  {{#each carData}}
-    <li>
-      <h1>{{ id }} </h1>
-      <h4>{{ modelName }}</h4>
-      <p>${{ pricing }}</p>
-      <p>{{ modelDetails }}</p>
-    </li>
+
+  {{#each videoData}}
+
+      <h1>{{ videos_id }} </h1>
+      <h1>{{ videos_title }} </h1>
+      <h1>{{ videos_year }} </h1>
+
+
   {{/each}}
-</ul>
+
+  <h1> why the fuck wont it work</h1>
