--- a/public/stylesheets/video.css
+++ b/public/stylesheets/video.css
@@ -126,10 +126,12 @@ li a:hover {
   font-weight: bold;
 }
 
-.vid_title {
-  font-size: 1.5em;
+.section_title {
+  font-size: 1.4em;
   margin-left: 5px;
   margin-bottom: 5px;
+	font-weight: bold;
+	text-shadow: 2px 2px 4px #000000;
 }
 
 
@@ -148,56 +150,84 @@ li a:hover {
 
 .video_info{
   position: absolute;
-  margin-top: 5px;
-  margin-left: 20px;
+  margin-top: 45px;
+  margin-left: 10px;
 
 }
 
 .video_info p{
   font-weight: lighter;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	max-width: 50ch;
+	font-size: 0.6em;
+	padding-top: 10px;
 }
 
 .video_info h1{
   font-size: 1.7em;
+	text-transform: uppercase;
 }
 
-.overlay {
-  opacity: 0;
-  margin-top: 5px;
-  margin-left: 5px;
-  position: absolute;
-  height: 175px;
-  width: 320px;
-  transition: .5s ease;
-  background-color: rgba(38,38,38, 0.8);
+.year{
+	float: right;
+	margin-top: 7px;
+	padding-left: 5px;
 }
 
-.overlay:hover {
-  opacity: 1;
-
+.title{
+	float: left;
 }
 
-.overlay_2 {
-  opacity: 1;
-  margin-top: 5px;
-  margin-left: 5px;
-  position: absolute;
-  height: 175px;
-  width: 320px;
-  transition: .5s ease;
-  background-color: rgba(38,38,38, 0.8);
+.desc
+{
+
+	clear: both;
 }
-
-.overlay_2:hover {
-  opacity: 1;
-
-}
-
 
 .play-button
 {
+	position: relative;
+  top: 35%;
+  transform: translateY(-35%);
   cursor: pointer;
-  padding-top: 35px;
   display: block;
-  margin: 0 auto;
+	margin: 0 auto;
+	opacity: 0.8;
+	color: blue;
+}
+
+
+div.single_vid {
+	float: left;
+	margin-right: 10px;
+    position: relative;
+		height: 175px;
+	  width: 320px;
+}
+
+div.overlay {
+    position: absolute;
+    top: 0px;
+    left: 0;
+		height: 175px;
+	  width: 320px;
+    background-color: rgba(38, 38, 38, 0.8);;
+		margin-left: 5px;
+		margin-top: 5px;
+		opacity: 0;
+}
+
+div.overlay:hover {
+		opacity: 1;
+}
+
+#your_list{
+	padding-top: 120px;
+}
+
+#allVideos
+{
+	margin-left: 40px;
 }
