--- a/views/video.handlebars
+++ b/views/video.handlebars
@@ -1,23 +1,4 @@
-<a href="/">
-  <i class="fa-fa-home"></i>
-</a>
-
-<h1>{{ message }}</h1>
-
-
-  {{#each videoData}}
-
-      <h1>{{ videos_id }} </h1>
-      <h1>{{ videos_title }} </h1>
-      <h1>{{ videos_year }} </h1>
-
-
-  {{/each}}
-
-  <h1> it works</h1>
-
-
-  <header>
+<header>
 
   <img class="logo" src="images/logo.png">
 
@@ -35,66 +16,35 @@
 
   </div>
 
-  </header>
+</header>
+
+<section id="allVideos">
+
+<section id="your_list">
+<h1 class="section_title">YOUR LIST:</h1>
+
+<!-- Loop to get all videos in that category -->
+  {{#each videoData}}
+      <div class="single_vid">
+
+          <img class="thumbnail" src="images/{{ videos_thumbnail }}">
 
 
+          <div class="overlay">
+            <img class="play-button" src="images/play.png">
+              <div class="video_info">
+                <h1 class="title">{{ videos_title }} - </h1>
+                <h2 class="year">{{ videos_year }}</h2>
+                <p class="desc">{{ videos_desc }}</p>
+              </div>
+          </div>
+      </div>
 
-  <section id="videos">
-
-    <div class="video_container_section" >
-      <h1 class="vid_title">YOUR LIST</h1>
-
-
-  <div class="video_displayed">
-        <div class="solo_video">
-          <img class="thumbnail" src="images/st_thumbnail.png">
-        </div>
-
-        <div class="overlay">
-          <img class="play-button" src="images/play.png">
-        <div class="video_info">
-          <h1>Stranger Things</h1>
-          <h2>1998</h2>
-          <p>Description</p>
-        </div>
-        </div>
-  </div>
-
-
-  <div class="solo_video">
-    <img class="thumbnail" src="images/bm_thumbnail.jpg">
-  </div>
-
-
-    </div>
+{{/each}}
+</section> <!-- end of Your List -->
 
 
 
 
 
-
-    <div class="video_container_section">
-      <h1 class="vid_title">Comedy</h1>
-
-      <img class="thumbnail" src="images/st_thumbnail.png">
-      <img class="thumbnail" src="images/bm_thumbnail.jpg">
-
-    </div>
-
-
-    <div class="video_container_section">
-      <h1 class="vid_title">Action</h1>
-
-      <img class="thumbnail" src="images/st_thumbnail.png">
-      <img class="thumbnail" src="images/bm_thumbnail.jpg">
-
-    </div>
-
-    <div class="video_container_section">
-      <h1 class="vid_title">New Release</h1>
-
-      <img class="thumbnail" src="images/st_thumbnail.png">
-      <img class="thumbnail" src="images/bm_thumbnail.jpg">
-
-    </div>
-  </section>
+</section> <!-- end of all videos -->
