Still working on it, video functions not working the way I want. Just pushing for part marks

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,6 +29,10 @@
 
 
 
+  {{#if video}}
+  <script src="javascripts/video.js"></script>
+  {{/if}}
+
 
 {{#if mainpage}}
 <script src="javascripts/main.js"></script>
